Fixed minor bug in visibility of edit-delete buttons

--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -270,7 +270,7 @@ a:hover {
     margin-right: 10px;
   }
 
-  .button-container {
+  .button-container.navbarbuttons {
     display: none !important;
   }
 }
